--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "ext-sodium": "*",
         "doctrine/dbal": "^4.2.1",
         "doctrine/doctrine-bundle": "^2.13.1",
-        "doctrine/orm": "^3.3",
+        "doctrine/orm": "^3.3.1",
         "jms/serializer-bundle": "^5.5.1",
         "lexik/jwt-authentication-bundle": "^3.1",
         "symfony/console": "7.2.*",
@@ -36,23 +36,24 @@
         "symfony/framework-bundle": "7.2.*",
         "symfony/monolog-bundle": "^3.10",
         "symfony/runtime": "7.2.*",
-        "symfony/security-bundle": ">=7.2",
-        "symfony/yaml": "7.2.*"
+        "symfony/security-bundle": ">=7.2.2",
+        "symfony/yaml": "7.2.*",
+        "willdurand/hateoas-bundle": "^2.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.24.1",
-        "infection/infection": "^0.29.8",
+        "infection/infection": "^0.29.10",
         "jetbrains/phpstorm-attributes": "^1.2",
         "phpmetrics/phpmetrics": "v3.0.0rc6",
-        "phpstan/phpstan": "^1.12.12",
+        "phpstan/phpstan": "^1.12.14",
         "phpunit/phpunit": "^9.6.22",
         "rector/rector": "^0.14.8",
         "symfony/browser-kit": ">=7.2",
         "symfony/css-selector": ">=7.2",
         "symfony/maker-bundle": "^1.61",
         "symfony/phpunit-bridge": "^7.2",
-        "symfony/stopwatch": ">=7.2",
-        "symfony/web-profiler-bundle": ">=7.2"
+        "symfony/stopwatch": ">=7.2.2",
+        "symfony/web-profiler-bundle": ">=7.2.2"
     },
     "autoload": {
         "psr-4": {
