test: ut of endpoints implementation of api results
Se agrega :
- Se agrega las pruebas unitarias de todos los casos de la api de resultados
- Se covertura al 100% del controlador de resultados

--- a/.env.test
+++ b/.env.test
@@ -21,4 +21,9 @@ ADMIN_USER_PASSWD="<userAdmin_passwd>"
 ## ROLE_USER useremail/password
 ROLE_USER_EMAIL="<user-email>"
 ROLE_USER_PASSWD="<user_passwd>"
+
+## ROLE_USER 2 useremail/password
+ROLE_USER2_EMAIL="<user-email>"
+ROLE_USER2_PASSWD="<user_passwd>"
+
 ###< project fixtures ###
